--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Fran's Personal Site</title>
+<link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
+
   <table cellspacing="25">
     <tr>
       <td><img src="img/fran2.jpg" width="200" height="200" alt="Frans pic"></td>
@@ -58,9 +60,9 @@
 
     </tfoot>
 
-  </table >
-<hr>
-  <table BORDER="2" >
+  </table>
+  <hr>
+  <table BORDER="2">
     <tr>
       <td>SKILLS</td>
     </tr>
