--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <table cellspacing="25">
     <tr>
-      <td><img class= "Fran" src="img/fran2.jpg" border-radius= "50%" width="200" height="200" alt="Frans pic"></td>
+      <td><img class="Fran" src="img/fran2.jpg" width="200" height="200" alt="Frans pic"></td>
       <td>
         <h1> Fran Ylitalo </h1>
 
