--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body> 
+<body>
 
   <table cellspacing="25">
     <tr>
-      <td><img class="Fran" src="img/fran2.jpg" width="200" height="200" alt="Frans pic"></td>
+      <td><img class="Fran" src="img/fran2.jpg"
+  width="200" height="200" alt="Frans pic" ></td>
       <td>
         <h1> Fran Ylitalo </h1>
 
